2003-07-14  Mark Mitchell  <mark@codesourcery.com>

	PR c++/7053
	* pt.c (unregister_specialization): Rename to ...
	(reregister_specialization): ... this.
	(tsubst_friend_function): Use it.
	(regenerate_decl_from_template): Likewise.

2002-04-26  Richard Henderson  <rth@redhat.com>

	PR c/3581
	* parse.y (string): Remove.  Update all uses to use STRING
	instead, and not call combine_strings.
	* rtti.c (tinfo_name): Use fix_string_type.
	* semantics.c (finish_asm_stmt): Don't call combine_strings.
	* spew.c (yylexstring): New.
	(read_token): Use it.

2004-08-06  Alexandre Oliva  <aoliva@redhat.com>

	* parse.y (structsp): Skip typename_type obtained from a
	class_head_decl, use the actual type.

2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/7718
	* pt.c (tsubst_decl): Remove assert.

2003-04-27  Mark Mitchell  <mark@codesourcery.com>

	PR c++/10506
	* method.c (use_thunk): Decrement immediate_size_expand.

	PR c++/10503
	* cp-tree.h (DECL_VAR_MARKED_P): New macro.
	(DECL_MAYBE_TEMPLATE): Remove.
	* class.c (fixed_type_or_null): Avoid infinite recursion.

2003-06-21  Jakub Jelinek  <jakub@redhat.com>

	* method.c: Include target.h.
	(make_alias_for_thunk): New function.
	(use_thunk): Use it if defined ASM_OUTPUT_DEF.  Put the thunk
	into the same section as the function it is calling.
	* Make-lang.in (cp/method.o): Depend on $(TARGET_H).

2003-05-07  Richard Henderson  <rth@redhat.com>

	PR c++/10570
	* cfns.gperf: Comment out POSIX thread cancellation points,
	plus abort and raise.
	* cfns.h: Regenerate.

2003-04-22  Release Manager

	* GCC 3.2.3 Released.

2003-04-15  Jason Merrill  <jason@redhat.com>

	* decl2.c (mark_used): Don't instantiate anything if
	skip_evaluation.

2003-03-24  Jakub Jelinek  <jakub@redhat.com>

	* Backport from mainline:
	2002-05-13  Jason Merrill  <jason@redhat.com>

	* class.c (build_vtbl_ref_1): Use fixed_type_or_null.
	(fixed_type_or_null): See through reference vars.
	(build_base_path): Vtable contents are constant.
